# folio-enrich

./: .dockerignore  .gitignore  Dockerfile  Enrich LLM_PROMPTS.md  LICENSE  PRD_ FOLIO Enrich (Content Tagging).md  README.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  run.py
backend/app/: config.py  main.py
backend/app/middleware/: error_handler.py  rate_limit.py  security.py
backend/app/models/: __init__.py  annotation.py  document.py  embedding_models.py  feedback.py  graph_models.py  job.py  llm_models.py
backend/app/pipeline/: orchestrator.py
backend/app/services/: cache.py
backend/tests/: conftest.py  test_aho_corasick.py  test_annotation_states.py  test_branch_config.py  test_branch_judge.py  test_cascade_promote.py  test_concept_batch.py  test_concept_detail.py  test_concept_identification.py  test_dependency_parsing.py  test_dismiss.py  test_document_type_checker.py  test_document_type_stage.py  test_email_ingestion.py  test_embedding_index.py  test_entity_ruler.py  test_export.py  test_faiss_index.py  test_feedback.py  test_folio_update_routes.py  test_html_ingestion.py  test_individual_extraction.py  test_ingestion.py  test_job_retention.py  test_lineage.py  test_llm_provider.py  test_llm_providers.py  test_metadata.py  test_normalization.py  test_owl_updater.py  test_pipeline.py  test_pos_confidence.py  test_pricing.py  test_progressive_pipeline.py  test_property_extraction.py  test_reconciliation.py  test_rerank_stage.py  test_resolution_stage.py  test_resolve_class_link_iris.py  test_resolver.py  (+11 more)
(+111 files in other folders)
